--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<title>Ashlay</title>
+		<link
+			rel="stylesheet"
+			href="./styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<section>
+			<div class="main">
+				<div class="left-section">
+					<div class="discover">
+						<h1>Discover</h1>
+						<h2>Our <span>Studio</span></h2>
+					</div>
+					<div class="paragraphs">
+						<div class="firstpara">
+							<p>
+								At our design studio, we are a collective of talented individuals ignited by our unwavering passion for transforming ideas into reality. With a
+								harmonious blend of diverse backgrounds and a vast array of skill sets, we join forces to create compelling solutions for our esteemed clients.
+							</p>
+						</div>
+						<div class="secondpara">
+							<p>
+								Collaboration is at the heart of what we do. Our team thrives on the synergy that arises when unique perspectives converge, fostering an environment of
+								boundless creativity. By harnessing our collective expertise, we produce extraordinary results that consistently surpass expectations.
+							</p>
+						</div>
+					</div>
+
+					<div class="image-section">
+						<div class="profile">
+							<img
+								src="./assets/profile.jpg"
+								alt="" />
+							<div class="orange">
+								<span>"</span>
+							</div>
+						</div>
+						<div class="text">
+							<p>Passionately Creating Design Wonders:Usnleashing Boundless Creativity</p>
+						</div>
+					</div>
+				</div>
+				<div class="right-section">
+					<div class="photo">
+						<img
+							src="./assets/photo.jpg"
+							alt="" />
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
