--- a/index.html
+++ b/index.html
@@ -6,6 +6,64 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<title>Ashlay</title>
+		<link
+			rel="stylesheet"
+			href="./styles.css" />
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	</head>
-	<body></body>
+	<body>
+		<section class="first-section">
+			<nav class="navbar">
+				<h1 class="logo">A.</h1>
+				<img
+					src="./assets/menu.png"
+					alt="menu" />
+			</nav>
+			<div class="first-main">
+				<div class="heading-container">
+					<h1 class="heading"><span class="bold">Designing</span> a Better</h1>
+					<h1 class="heading"><span class="bold">World </span>Today</h1>
+				</div>
+				<p class="info-para">
+					Welcome to our world of endless imagination and boundless creativity.
+					Together, let's embark on a remarkable journey where dreams become
+					tangible realities.
+				</p>
+				<div class="worksWrapper">
+					<div class="wedo">
+						<span class="wedo-text">what we do</span>
+						<div class="right-arrow-yellow">
+							<span
+								style="color: rgb(255, 152, 0)"
+								class="material-symbols-outlined">
+								arrow_right_alt
+							</span>
+						</div>
+					</div>
+					<div class="view-works-wrapper">
+						<span class="view">View works</span>
+						<div>
+							<span
+								style="color: white"
+								class="material-symbols-outlined">
+								arrow_right_alt
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
