--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 		<link
 			rel="stylesheet"
 			href="./styles.css" />
-		<link
-			rel="stylesheet"
-			href="./styles.css" />
+
 		<link
 			rel="preconnect"
 			href="https://fonts.googleapis.com" />
@@ -27,7 +25,52 @@
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	</head>
 	<body>
-		<section>
+		<section class="first-section">
+			<nav class="navbar">
+				<h1 class="logo">A.</h1>
+				<img
+					src="./assets/menu.png"
+					alt="menu" />
+			</nav>
+			<div class="first-main">
+				<div class="content-wrapper">
+					<div class="heading-container">
+						<h1 class="heading">
+							<span class="bold">Designing</span> a Better
+						</h1>
+						<h1 class="heading"><span class="bold">World </span>Today</h1>
+					</div>
+					<p class="info-para">
+						Welcome to our world of endless imagination and boundless
+						creativity. Together, let's embark on a remarkable journey where
+						dreams become tangible realities.
+					</p>
+					<div class="worksWrapper">
+						<div class="wedo">
+							<span class="inner-text">what we do</span>
+							<div class="right-arrow-circle">
+								<span
+									style="color: rgb(255, 152, 0)"
+									class="material-symbols-outlined">
+									arrow_right_alt
+								</span>
+							</div>
+						</div>
+						<div class="view-works-wrapper">
+							<span class="inner-text white">View works</span>
+							<div class="right-arrow-circle dull">
+								<span
+									style="color: white"
+									class="material-symbols-outlined">
+									arrow_right_alt
+								</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="second-section">
 			<div class="main">
 				<div class="left-section">
 					<div class="discover">
@@ -79,49 +122,6 @@
 						<img
 							src="./assets/photo.jpg"
 							alt="" />
-					</div>
-				</div>
-			</div>
-		</section>
-	</body>
-	<body>
-		<section class="first-section">
-			<nav class="navbar">
-				<h1 class="logo">A.</h1>
-				<img
-					src="./assets/menu.png"
-					alt="menu" />
-			</nav>
-			<div class="first-main">
-				<div class="heading-container">
-					<h1 class="heading"><span class="bold">Designing</span> a Better</h1>
-					<h1 class="heading"><span class="bold">World </span>Today</h1>
-				</div>
-				<p class="info-para">
-					Welcome to our world of endless imagination and boundless creativity.
-					Together, let's embark on a remarkable journey where dreams become
-					tangible realities.
-				</p>
-				<div class="worksWrapper">
-					<div class="wedo">
-						<span class="wedo-text">what we do</span>
-						<div class="right-arrow-yellow">
-							<span
-								style="color: rgb(255, 152, 0)"
-								class="material-symbols-outlined">
-								arrow_right_alt
-							</span>
-						</div>
-					</div>
-					<div class="view-works-wrapper">
-						<span class="view">View works</span>
-						<div>
-							<span
-								style="color: white"
-								class="material-symbols-outlined">
-								arrow_right_alt
-							</span>
-						</div>
 					</div>
 				</div>
 			</div>
