working on fourthsection

--- a/index.html
+++ b/index.html
@@ -56,5 +56,26 @@
 				</div>
 			</div>
 		</section>
+		<section class="fourth-section">
+			<div class="leftside">
+				<div class="meet">
+					<h1>Meet</h1>
+					<h1>Our</h1>
+					<h1>Team</h1>
+				</div>
+				<div class="information">
+					<p>
+						We are talented individuals who are passionate about bringing ideas to life. With a diverse range of backgrounds and skill sets, we collaborate to produce effective
+						solutions for our clients.
+					</p>
+					<p>Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
+				</div>
+
+				<div class="delivering">
+					<span>We delivering exceptional results.</span>
+				</div>
+			</div>
+			<div class="rightside"></div>
+		</section>
 	</body>
 </html>
