fourth section completed

--- a/index.html
+++ b/index.html
@@ -35,15 +35,11 @@
 			<div class="first-main">
 				<div class="content-wrapper">
 					<div class="heading-container">
-						<h1 class="heading">
-							<span class="bold">Designing</span> a Better
-						</h1>
+						<h1 class="heading"><span class="bold">Designing</span> a Better</h1>
 						<h1 class="heading"><span class="bold">World </span>Today</h1>
 					</div>
 					<p class="info-para">
-						Welcome to our world of endless imagination and boundless
-						creativity. Together, let's embark on a remarkable journey where
-						dreams become tangible realities.
+						Welcome to our world of endless imagination and boundless creativity. Together, let's embark on a remarkable journey where dreams become tangible realities.
 					</p>
 					<div class="worksWrapper">
 						<div class="wedo">
@@ -80,22 +76,14 @@
 					<div class="paragraphs">
 						<div class="firstpara">
 							<p>
-								At our design studio, we are a collective of
-								talented individuals ignited by our unwavering
-								passion for transforming ideas into reality. With a
-								harmonious blend of diverse backgrounds and a vast
-								array of skill sets, we join forces to create
-								compelling solutions for our esteemed clients.
+								At our design studio, we are a collective of talented individuals ignited by our unwavering passion for transforming ideas into reality. With a
+								harmonious blend of diverse backgrounds and a vast array of skill sets, we join forces to create compelling solutions for our esteemed clients.
 							</p>
 						</div>
 						<div class="secondpara">
 							<p>
-								Collaboration is at the heart of what we do. Our
-								team thrives on the synergy that arises when unique
-								perspectives converge, fostering an environment of
-								boundless creativity. By harnessing our collective
-								expertise, we produce extraordinary results that
-								consistently surpass expectations.
+								Collaboration is at the heart of what we do. Our team thrives on the synergy that arises when unique perspectives converge, fostering an environment of
+								boundless creativity. By harnessing our collective expertise, we produce extraordinary results that consistently surpass expectations.
 							</p>
 						</div>
 					</div>
@@ -110,10 +98,7 @@
 							</div>
 						</div>
 						<div class="text">
-							<p>
-								Passionately Creating Design Wonders:Usnleashing
-								Boundless Creativity
-							</p>
+							<p>Passionately Creating Design Wonders:Usnleashing Boundless Creativity</p>
 						</div>
 					</div>
 				</div>
@@ -140,12 +125,47 @@
 					</p>
 					<p>Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
 				</div>
-
+				<div class="wedo">
+					<span class="inner-text">what we do</span>
+					<div class="right-arrow-circle">
+						<span
+							style="color: rgb(255, 152, 0)"
+							class="material-symbols-outlined">
+							arrow_right_alt
+						</span>
+					</div>
+				</div>
 				<div class="delivering">
 					<span>We delivering exceptional results.</span>
 				</div>
 			</div>
-			<div class="rightside"></div>
+			<div class="rightside">
+				<div class="pics-colom1">
+					<div class="img-container">
+						<img
+							src="./assets/female.jpg"
+							alt="" />
+					</div>
+					<div class="img-container">
+						<img
+							src="./assets/male.jpg"
+							alt="" />
+					</div>
+				</div>
+				<div class="pics-colom2">
+					<span>* The founder of our agency</span>
+					<div class="img-container">
+						<img
+							src="./assets/profile.jpg"
+							alt="" />
+					</div>
+					<div class="img-container">
+						<img
+							src="./assets/girl.jpg"
+							alt="" />
+					</div>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
