sixth section completed

--- a/index.html
+++ b/index.html
@@ -167,5 +167,73 @@
 				</div>
 			</div>
 		</section>
+		<section class="sixth-section">
+			<div class="popular">
+				<h1>Popular Publications:</h1>
+				<div class="viewall">
+					<span class="inner-text">VIEW ALL</span>
+					<div class="viewall-circle">
+						<span
+							style="color: black"
+							class="material-symbols-outlined">
+							arrow_right_alt
+						</span>
+					</div>
+				</div>
+			</div>
+			<div class="middle-bg">
+				<div class="leftbox">
+					<div class="pencils">
+						<img
+							src="./assets/pencils.jpg"
+							alt="" />
+					</div>
+					<div class="technology">
+						<p>TECHNOLOGY</p>
+						<span>MAY 24 2023</span>
+					</div>
+					<div class="become">
+						<h1>How to Become a Graphic Designer in 10 Simple Steps</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sequi commodi dignissimos optio, beatae, eos necessitatib...</p>
+					</div>
+					<div class="arrow">
+						<span>READ MORE</span>
+						<div class="greycircle">
+							<span
+								style="color: black"
+								class="material-symbols-outlined">
+								arrow_right_alt
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="rightbox">
+					<div class="pencils">
+						<img
+							src="./assets/women.jpg"
+							alt="" />
+					</div>
+					<div class="technology">
+						<p>TECHNOLOGY</p>
+						<span>MAY 24 2023</span>
+					</div>
+					<div class="become">
+						<h1>16 Best Graphic Design Online and Offline Courses</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sequi commodi dignissimos optio, beatae, eos necessitatib...</p>
+					</div>
+					<div class="arrow">
+						<span>READ MORE</span>
+						<div class="greycircle">
+							<span
+								style="color: black"
+								class="material-symbols-outlined">
+								arrow_right_alt
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
